[project]
name = "twelve"
version = "0.1.0"
description = "Static sites with an extra 'push'."
readme = "README.md"
authors = [
    { name = "stephen gilmore"}
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
twelve = "twelve:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
